Updating Readme.md to add maven instructions.